--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_svg: ^2.0.17
   eva_icons_flutter: ^3.1.0
   url_launcher: ^6.3.1
-  ussd_advanced: ^1.1.0
+  #ussd_advanced: ^1.1.0
 
 dev_dependencies:
   flutter_test:
